infra/k8s/debt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debt-service
  labels:
    app:  debt-service
spec:
  selector:
    matchLabels:
      app:  debt-service
  replicas: 1
  template:
    metadata:
      labels:
        app: debt-service
    spec:
      containers:
      - name: debt-service
        image: 2021199724/debt-service
        ports:
        -  containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: debt-service
  labels:
    app: debt-service
spec:
  selector:
    app: debt-service
  ports:
    - protocol: TCP
      name: debt
      port: 8083
      targetPort: 8083
