infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  selector:
    matchLabels:
      app: order-service
  replicas: 1
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image:  2021199724/order-service
        imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-servcie
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      name: order
      port: 8082
      targetPort: 8082
