infra/k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: 2021199724/user-service
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 8080
      targetPort: 8080
# Listening to celine dion
