infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata: 
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec: 
  rules:
    - host: tradezerr.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 8080
          - path: /api/transactions/?(.*) 
            pathType: Prefix
            backend:
              service: 
                name: transaction-srv
                port:
                  number: 8081
